traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:46: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime16.TraversalDiagonal'
override def run() {
             ^